# dlib-android-jni-test

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jason9075/importdlibdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: detector.svm
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/my/dlib/data/: messages.pb.cc  messages.pb.h
app/src/main/java/com/jason9075/importdlibdemo/: CameraDetectActivity.java  DLibLandmarks68Detector.java  IDLibFaceDetector.java  LegoToyDetectorActivity.java  MainActivity.java  PhotoDetectActivity.java
app/src/main/java/com/jason9075/importdlibdemo/detector/: DLibLandmarks68Detector.java  DlibDetector.java  GoogleVisionAndDlibLandmarkDetector.java  IDLibFaceDetector.java
app/src/main/java/com/jason9075/importdlibdemo/detector/single/: DLibLandmarks68Detector.java  IDLibFaceDetector.java  LegoToyDetector.java
app/src/main/java/com/jason9075/importdlibdemo/utils/: Utils.java
app/src/main/java/com/jason9075/importdlibdemo/view/: CameraSourcePreview.java  FaceLandmarksOverlayView.java
app/src/main/java/com/my/jni/dlib/data/: Messages.java
app/src/main/proto/: compile.sh  messages.proto
app/src/main/res/layout/: activity_camera_detect.xml  activity_main.xml  activity_photo_detect.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/jason9075/importdlibdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
